// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LikeC4ModelBuilder > builds model with description and technology 1`] = `
{
  "elements": {
    "client": {
      "description": null,
      "id": "client",
      "kind": "user",
      "links": null,
      "shape": "person",
      "style": {
        "opacity": 40,
      },
      "tags": null,
      "technology": null,
      "title": "client",
    },
    "system": {
      "description": null,
      "id": "system",
      "kind": "component",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "system",
    },
    "system.backend": {
      "color": "secondary",
      "description": null,
      "id": "system.backend",
      "kind": "component",
      "links": null,
      "style": {
        "border": "dashed",
      },
      "tags": null,
      "technology": "NodeJS",
      "title": "Backend",
    },
    "system.frontend": {
      "color": "muted",
      "description": "Frontend description",
      "id": "system.frontend",
      "kind": "component",
      "links": null,
      "shape": "browser",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "frontend",
    },
  },
  "relations": {
    "1phfte1": {
      "id": "1phfte1",
      "source": "client",
      "target": "system.frontend",
      "title": "",
    },
    "1txa8xq": {
      "id": "1txa8xq",
      "source": "system.frontend",
      "target": "system.backend",
      "title": "requests",
    },
  },
  "specification": {
    "elements": {
      "component": {
        "style": {},
      },
      "user": {
        "style": {
          "opacity": 40,
          "shape": "person",
        },
      },
    },
    "relationships": {},
    "tags": [],
  },
  "views": {
    "index": {
      "__": "element",
      "autoLayout": "TB",
      "customColorDefinitions": {},
      "description": null,
      "edges": [
        {
          "id": "client:system",
          "label": null,
          "parent": null,
          "relations": [
            "1phfte1",
          ],
          "source": "client",
          "target": "system",
        },
      ],
      "hash": "ac469a54751528fb8dabc034a32c9ca081503229",
      "id": "index",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "client",
          "inEdges": [],
          "kind": "user",
          "level": 0,
          "links": null,
          "outEdges": [
            "client:system",
          ],
          "parent": null,
          "shape": "person",
          "style": {
            "opacity": 40,
          },
          "tags": null,
          "technology": null,
          "title": "client",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system",
          "inEdges": [
            "client:system",
          ],
          "kind": "component",
          "level": 0,
          "links": null,
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "system",
        },
      ],
      "relativePath": "",
      "tags": null,
      "title": "Landscape view",
    },
  },
}
`;

exports[`LikeC4ModelBuilder > builds model with extend 1`] = `
{
  "elements": {
    "client": {
      "description": null,
      "id": "client",
      "kind": "user",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "client",
    },
    "system": {
      "description": null,
      "id": "system",
      "kind": "component",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "system",
    },
    "system.backend": {
      "description": null,
      "id": "system.backend",
      "kind": "component",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "backend",
    },
    "system.backend.api": {
      "description": null,
      "id": "system.backend.api",
      "kind": "component",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "api",
    },
    "system.frontend": {
      "description": null,
      "id": "system.frontend",
      "kind": "component",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "frontend",
    },
  },
  "relations": {
    "19veiui": {
      "id": "19veiui",
      "source": "client",
      "target": "system.frontend",
      "title": "opens",
    },
    "pups09": {
      "id": "pups09",
      "source": "system.frontend",
      "target": "system.backend.api",
      "title": "requests",
    },
  },
  "specification": {
    "elements": {
      "component": {
        "style": {},
      },
      "user": {
        "style": {},
      },
    },
    "relationships": {},
    "tags": [
      "deprecated",
    ],
  },
  "views": {
    "frontend": {
      "__": "element",
      "autoLayout": "TB",
      "customColorDefinitions": {},
      "description": null,
      "edges": [
        {
          "id": "client:system.frontend",
          "label": "opens",
          "parent": null,
          "relations": [
            "19veiui",
          ],
          "source": "client",
          "target": "system.frontend",
        },
        {
          "id": "system.frontend:system.backend",
          "label": "requests",
          "parent": null,
          "relations": [
            "pups09",
          ],
          "source": "system.frontend",
          "target": "system.backend",
        },
      ],
      "hash": "79faa703342209c445f10cc39cb15618fc4bba64",
      "id": "frontend",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "client",
          "inEdges": [],
          "kind": "user",
          "level": 0,
          "links": null,
          "outEdges": [
            "client:system.frontend",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "client",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system.frontend",
          "inEdges": [
            "client:system.frontend",
          ],
          "kind": "component",
          "level": 0,
          "links": null,
          "outEdges": [
            "system.frontend:system.backend",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "frontend",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system.backend",
          "inEdges": [
            "system.frontend:system.backend",
          ],
          "kind": "component",
          "level": 0,
          "links": null,
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "backend",
        },
      ],
      "relativePath": "2.c4",
      "tags": null,
      "title": "frontend",
      "viewOf": "system.frontend",
    },
    "index": {
      "__": "element",
      "autoLayout": "TB",
      "customColorDefinitions": {},
      "description": null,
      "edges": [
        {
          "id": "client:system",
          "label": "opens",
          "parent": null,
          "relations": [
            "19veiui",
          ],
          "source": "client",
          "target": "system",
        },
      ],
      "hash": "cc748ca08ef32c6b15850602f25c38ad1e749497",
      "id": "index",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "client",
          "inEdges": [],
          "kind": "user",
          "level": 0,
          "links": null,
          "outEdges": [
            "client:system",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "client",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system",
          "inEdges": [
            "client:system",
          ],
          "kind": "component",
          "level": 0,
          "links": null,
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "system",
        },
      ],
      "relativePath": "2.c4",
      "tags": null,
      "title": "Index",
    },
    "v1": {
      "__": "element",
      "autoLayout": "LR",
      "customColorDefinitions": {},
      "description": null,
      "edges": [
        {
          "id": "system.frontend:system.backend.api",
          "label": "requests",
          "parent": null,
          "relations": [
            "pups09",
          ],
          "source": "system.frontend",
          "target": "system.backend.api",
        },
      ],
      "hash": "e37913cdeecf2c10f83c4311ac7cde84821b37b2",
      "id": "v1",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system.frontend",
          "inEdges": [],
          "kind": "component",
          "level": 0,
          "links": null,
          "navigateTo": "frontend",
          "outEdges": [
            "system.frontend:system.backend.api",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "frontend",
        },
        {
          "children": [
            "system.backend.api",
          ],
          "color": "primary",
          "depth": 1,
          "description": null,
          "id": "system.backend",
          "inEdges": [
            "system.frontend:system.backend.api",
          ],
          "kind": "component",
          "level": 0,
          "links": null,
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "backend",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system.backend.api",
          "inEdges": [
            "system.frontend:system.backend.api",
          ],
          "kind": "component",
          "level": 1,
          "links": null,
          "outEdges": [],
          "parent": "system.backend",
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "api",
        },
      ],
      "relativePath": "2.c4",
      "tags": null,
      "title": "api",
      "viewOf": "system.backend.api",
    },
  },
}
`;

exports[`LikeC4ModelBuilder > builds model with relationship spec and tag 1`] = `
{
  "elements": {
    "user1": {
      "description": null,
      "id": "user1",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "user1",
    },
    "user2": {
      "description": null,
      "id": "user2",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "user2",
    },
  },
  "relations": {
    "p2bxx1": {
      "id": "p2bxx1",
      "kind": "async",
      "source": "user1",
      "tags": [
        "next",
      ],
      "target": "user2",
      "title": "",
    },
  },
  "specification": {
    "elements": {
      "person": {
        "style": {},
      },
    },
    "relationships": {
      "async": {},
    },
    "tags": [
      "next",
    ],
  },
  "views": {
    "index": {
      "__": "element",
      "autoLayout": "TB",
      "customColorDefinitions": {},
      "description": null,
      "edges": [
        {
          "id": "user1:user2",
          "kind": "async",
          "label": null,
          "parent": null,
          "relations": [
            "p2bxx1",
          ],
          "source": "user1",
          "tags": [
            "next",
          ],
          "target": "user2",
        },
      ],
      "hash": "2e3fd594e686a7aa420adcf9280bf544bb4cde6d",
      "id": "index",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user1",
          "inEdges": [],
          "kind": "person",
          "level": 0,
          "links": null,
          "outEdges": [
            "user1:user2",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "user1",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user2",
          "inEdges": [
            "user1:user2",
          ],
          "kind": "person",
          "level": 0,
          "links": null,
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "user2",
        },
      ],
      "relativePath": "",
      "tags": null,
      "title": "Landscape view",
    },
  },
}
`;

exports[`LikeC4ModelBuilder > builds model with relationship spec with technology 1`] = `
{
  "elements": {
    "user1": {
      "description": null,
      "id": "user1",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "user1",
    },
    "user2": {
      "description": null,
      "id": "user2",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "user2",
    },
  },
  "relations": {
    "p2bxx1": {
      "id": "p2bxx1",
      "kind": "async",
      "source": "user1",
      "target": "user2",
      "technology": "Async",
      "title": "",
    },
  },
  "specification": {
    "elements": {
      "person": {
        "style": {},
      },
    },
    "relationships": {
      "async": {
        "technology": "Async",
      },
    },
    "tags": [],
  },
  "views": {
    "index": {
      "__": "element",
      "autoLayout": "TB",
      "customColorDefinitions": {},
      "description": null,
      "edges": [
        {
          "id": "user1:user2",
          "kind": "async",
          "label": "[Async]",
          "parent": null,
          "relations": [
            "p2bxx1",
          ],
          "source": "user1",
          "target": "user2",
          "technology": "Async",
        },
      ],
      "hash": "161eceeafe8043ac53e924941d1b2203306d406a",
      "id": "index",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user1",
          "inEdges": [],
          "kind": "person",
          "level": 0,
          "links": null,
          "outEdges": [
            "user1:user2",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "user1",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user2",
          "inEdges": [
            "user1:user2",
          ],
          "kind": "person",
          "level": 0,
          "links": null,
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "user2",
        },
      ],
      "relativePath": "",
      "tags": null,
      "title": "Landscape view",
    },
  },
}
`;

exports[`LikeC4ModelBuilder > builds model with styled relationship 1`] = `
{
  "elements": {
    "user1": {
      "description": null,
      "id": "user1",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "user1",
    },
    "user2": {
      "description": null,
      "id": "user2",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "user2",
    },
  },
  "relations": {
    "p2bxx1": {
      "color": "red",
      "head": "diamond",
      "id": "p2bxx1",
      "line": "dotted",
      "source": "user1",
      "tail": "none",
      "target": "user2",
      "title": "",
    },
  },
  "specification": {
    "elements": {
      "person": {
        "style": {},
      },
    },
    "relationships": {},
    "tags": [],
  },
  "views": {
    "index": {
      "__": "element",
      "autoLayout": "TB",
      "customColorDefinitions": {},
      "description": null,
      "edges": [
        {
          "color": "red",
          "head": "diamond",
          "id": "user1:user2",
          "label": null,
          "line": "dotted",
          "parent": null,
          "relations": [
            "p2bxx1",
          ],
          "source": "user1",
          "tail": "none",
          "target": "user2",
        },
      ],
      "hash": "c39ac45d66eb3f057ec9e3d802f4d09093a371b2",
      "id": "index",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user1",
          "inEdges": [],
          "kind": "person",
          "level": 0,
          "links": null,
          "outEdges": [
            "user1:user2",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "user1",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user2",
          "inEdges": [
            "user1:user2",
          ],
          "kind": "person",
          "level": 0,
          "links": null,
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "user2",
        },
      ],
      "relativePath": "",
      "tags": null,
      "title": "Landscape view",
    },
  },
}
`;
